# merkle-mountain-range

./: Cargo.toml  Makefile
benches/: helper_benchmark.rs  mmr_benchmark.rs
src/: ancestry_proof.rs  error.rs  helper.rs  lib.rs  mmr.rs  util.rs
src/tests/: mod.rs  test_ancestry.rs  test_mmr.rs  test_node_mmr.rs  test_sequence.rs
