[package]
name = "polkadot-ckb-merkle-mountain-range"
version = "0.6.0"
authors = [
    "Nervos Core Dev <dev@nervos.org>",
    "Parity Technologies <admin@parity.io>",
    "Robert Hambrock <roberthambrock@gmail.com>"
]

edition = "2018"
license = "MIT"
description = "A generalized merkle mountain range implementation (polkadot fork)"
repository = "https://github.com/paritytech/merkle-mountain-range"

[features]
default = ["std"]
std = []

[dependencies]
cfg-if = "1.0"
itertools = {version = "0.10.5", default-features = false, features = ["use_alloc"]}

[dev-dependencies]
faster-hex = "0.8.0"
criterion = "0.5.1"
rand = "0.8.5"
proptest = "1.2.0"
lazy_static = "1.4.0"
bytes = "1.4.0"
blake2b-rs = "0.2.0"

[[bench]]
name = "mmr_benchmark"
harness = false

[[bench]]
name = "helper_benchmark"
harness = false
